# jobsletter

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: main.py  routes.py
backend/app/controllers/: users.py
backend/app/core/: config.py  constants.py  db.py  security.py
backend/app/models/: __init__.py  base.py  users.py
backend/app/views/: users.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: c6175d98ba79_initial_migration.py
